--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,9 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
+  },
+  "resolutions": {
+    "angular": "~1.3",
+    "angular-route": "~1.3",
   }
 }
