--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^4.3.1",
     "mongoose-findorcreate": "^0.1.2",
     "passport": "^0.3.2",
-    "passport-github": "^1.0.0"
+    "passport-github": "^1.0.0",
+    "phantomjs": "^1.9.19"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
