--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,5 @@ before_script:
 script:
   - karma start config/karma.config.js --single-run --browsers PhantomJS
   - node server &
+  - webdriver-manager start &
   - protractor config/protractor.js
