new updates in production env

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,15 @@ env:
     - NODE_ENV: test
 addons:
   sauce_connect: true
+deploy:
+  provider: openshift
+  user: maykonluiscapellari@gmail.com
+  password:
+    secure: C@p3ll@r1
+  app: contatooh
+  domain: 'capellari.rhcloud.com'
+on:
+  repo: maykon/contatooh
 before_install:
   - npm install -g bower
   - npm install -g grunt-cli
@@ -19,10 +28,14 @@ before_install:
   - bower install
 before_script:
   - node test/data.js
-  - grunt
-  - cd dist
+  - grunt minifica
 script:
   - karma start config/karma.config.js --single-run --browsers PhantomJS
   - node server &
-  - webdriver-manager start &
   - protractor config/protractor.js
+before_deploy:
+  - git config --global user.email 'maykonluiscapellari@gmail'
+  - git config --global user.name 'Maykon Luis Capellari'
+  - git checkout $TRAVIS_BRANCH
+  - git add --all
+  -git commit -am "Travis commit"
